--- a/css/comic.css
+++ b/css/comic.css
@@ -8,19 +8,19 @@ header{
 }
 .logo{
     text-align: center;
-
-}
-.img{
-    border-radius: 60px;
-}
-a{
-    font-size: 30px;
+    
 }
 .titulo{
     color: white;
 }
+.fotoini{
+    border-radius: 160px;
+}
+a{
+    font-size: 20px;
+}
 .textcuen{
-    font-size: 30px;
+    font-size: 20px;
 }
 .regis{
     font-size: 20px;
