--- a/css/mangas.css
+++ b/css/mangas.css
@@ -10,17 +10,17 @@ header{
     text-align: center;
 
 }
-.img{
-    border-radius: 60px;
-}
-a{
-    font-size: 30px;
-}
 .titulo{
     color: white;
 }
+.fotoini{
+    border-radius: 160px;
+}
+a{
+    font-size: 20px;
+}
 .textcuen{
-    font-size: 30px;
+    font-size: 20px;
 }
 .regis{
     font-size: 20px;
