Agrege libros en la pagina principal

--- a/css/comic.css
+++ b/css/comic.css
@@ -18,6 +18,12 @@ header{
 }
 a{
     font-size: 20px;
+    text-decoration: none;
+    background-color: black;
+    color: white;
+}
+.margi{
+    background-color: black;
 }
 .textcuen{
     font-size: 20px;
