--- a/css/mangas.css
+++ b/css/mangas.css
@@ -119,6 +119,13 @@ a{
     box-shadow: 2px 2px 29px 0 rgb(255, 0, 0);
 }
 
+.text-caro{
+    text-align: center;
+    background-color: rgb(141, 0, 0) ;
+    font-family: fantasy;
+    color: black;
+}   
+
 .a-redes{
     margin: 0 100px;
     border-radius: 50%;
