--- a/css/comic.css
+++ b/css/comic.css
@@ -15,7 +15,11 @@ header{
     color: white;
 }
 .fotoini{
-    border-radius: 120px;
+    border-radius: 160px;
+}
+.text-comics{
+    font-size: 25px;
+    margin-left: 15px;
 }
 a{
     font-size: 20px;
@@ -73,8 +77,8 @@ a{
 
 /*por si son muy largas las imagenes cambiar aca*/
 .card img{
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 80%;
     object-fit: cover;
     transition: all 1s ease-in-out;
     filter: grayscale(100%);
@@ -116,7 +120,7 @@ a{
     background: rgba(0, 0, 0, 0);
     color: var(--color);
     font-size: 2.5em;
-    margin-left: 160px;
+    margin-left: 140px;
     margin-top: 280px;
     -webkit-box-reflect: below 5px linear-gradient(to 
     bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
