--- a/css/comic.css
+++ b/css/comic.css
@@ -18,8 +18,11 @@ header{
     border-radius: 160px;
 }
 .text-comics{
-    font-size: 25px;
-    margin-left: 15px;
+    font-size: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 50px;
+
 }
 a{
     font-size: 20px;
@@ -121,7 +124,6 @@ a{
     color: var(--color);
     font-size: 2.5em;
     margin-left: 140px;
-    margin-top: 280px;
     -webkit-box-reflect: below 5px linear-gradient(to 
     bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
 }
@@ -136,7 +138,23 @@ a{
 }
 
 .codetheworld-io{
-    margin-top: 40px;
     background-color: white;
-    height: 550px;
+    height: 250px;
+}
+
+.titulo-comics{
+    font-size: 25px;
+    margin-left: 58px;
+}
+.margi2{
+    background-color: white;
+    text-decoration: none;
+}
+
+.Comicstext1{
+    font-size: 18px;
+    font-family: monospace;
+    margin-left: 60px;
+    margin-right: 80px;
+    margin-top: 45px;
 }
