--- a/css/mangas.css
+++ b/css/mangas.css
@@ -23,9 +23,6 @@ a{
     text-decoration: none;
     color: rgb(0, 0, 0);
 }
-.margi{
-
-}
 .textcuen{
     font-size: 20px;
 }
@@ -48,6 +45,11 @@ a{
 .h1{
     text-align: center;
     color: rgb(0, 0, 0);
+}
+.text-manga-ini{
+    margin-top: 40px;
+    margin-left: 100px;
+    margin-right: 60px;
 }
 
 .futuro{
@@ -120,7 +122,7 @@ a{
 
 .text-caro{
     text-align: center;
-    background-color: rgb(141, 0, 0) ;
+    background-color: #FF7F50 ;
     font-family: fantasy;
     color: black;
     margin: 0;
@@ -130,7 +132,7 @@ a{
     margin: 0 100px;
     border-radius: 50%;
     box-sizing: border-box;
-    background: #910000;
+    background: #FF7F50;
     width: 100px;
     height: 100px;
     display: inline-flex;
@@ -140,7 +142,6 @@ a{
     transition: 0.5s;
     font-size: 2.5em;
     margin-left: 160px;
-    margin-top: 80px;
     -webkit-box-reflect: below 5px linear-gradient(to 
     bottom, rgba(255, 0, 0, 0), rgb(0, 0, 0));
 }
@@ -151,4 +152,8 @@ a{
     0 0 25px var(--color),
     0 0 50px var(--color),
     0 0 200px var(--color);
+}
+
+.codetheworld-io{
+    background-color: #FF7F50;
 }
