--- a/css/comic.css
+++ b/css/comic.css
@@ -3,35 +3,30 @@
 body{
     padding: 0;
     margin: 0;
+    background-image: linear-gradient(#c4722a, #FF7F50);
 }
 
 header{
-    background-color: black;
+    background-image: linear-gradient(#c4722a, #FF7F50);
 }
 .logo{
     text-align: center;
 }
-.titulo{
-    color: white;
-}
 .fotoini{
-    border-radius: 160px;
+    width: 700px;
 }
 .text-comics{
     font-size: 20px;
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 50px;
-
+    color: black;
 }
 a{
     font-size: 20px;
-    text-decoration: none;
-    background-color: black;
-    color: white;
-}
-.margi{
-    background-color: black;
+    text-decoration:none;
+    color: black;
+    border: none;
 }
 .textcuen{
     font-size: 20px;
@@ -39,10 +34,17 @@ a{
 .regis{
     font-size: 20px;
 }
-
-.col-lg-12{
+.btn{
+    text-decoration: none;
+    background-color: none;
+    border: none;
+    margin-top: 40px;
+}
+.menu{
     text-align: center;
-    background-color: black;
+    background-image: linear-gradient(#FF7F50, #c4722a);
+    border: none;
+
 }
 
 .container{
@@ -53,6 +55,7 @@ a{
     margin: 10vmin;
     overflow: hidden;
     transform: skew(5deg);
+    background-image: linear-gradient(#c4722a, #FF7F50);
 }
 
 .card{
@@ -123,7 +126,7 @@ a{
     background: rgba(0, 0, 0, 0);
     color: var(--color);
     font-size: 2.5em;
-    margin-left: 140px;
+    margin-left: 160px;
     -webkit-box-reflect: below 5px linear-gradient(to 
     bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
 }
@@ -145,16 +148,26 @@ a{
 .titulo-comics{
     font-size: 25px;
     margin-left: 58px;
+    color: black;
 }
 .margi2{
-    background-color: white;
+    background-color: none;
     text-decoration: none;
+    margin-top: -0px;
 }
 
 .Comicstext1{
     font-size: 18px;
-    font-family: monospace;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin-left: 60px;
     margin-right: 80px;
     margin-top: 45px;
+    color: black;
 }
+
+.codetheworld-io{
+    background-color: #FF7F50;
+}
+
+
+
